[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
minmaxn = "0.2.0"
array_windows = "0.2.0"
num = "0.4.0"
typed-arena = "2.0.1"
regex = "1.7.0"
memoize = "0.3.3"
